Upload mojo: RHQ4.12 allows to wait for plugin scan and plugins update on all agents
Added integration tests (against a fake RHQ Server)

See #16