@@ -44,7 +44,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven-javadoc-plugin.version>2.9</maven-javadoc-plugin.version>
-    <httpclient4.version>4.2.5</httpclient4.version>
+    <httpclient4.version>4.2.6</httpclient4.version>
     <fastBuild>false</fastBuild>
   </properties>
 
@@ -96,6 +96,11 @@
         <version>1.6</version>
       </dependency>
       <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.1</version>
+      </dependency>
+      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>1.5.6</version>
@@ -138,6 +143,19 @@
       <groupId>org.zeroturnaround</groupId>
       <artifactId>zt-zip</artifactId>
       <version>1.6</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.shrinkwrap</groupId>
+      <artifactId>shrinkwrap-depchain</artifactId>
+      <version>1.2.1</version>
+      <type>pom</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.spec.javax.ws.rs</groupId>
+      <artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
+      <version>1.0.1.Final</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -191,6 +209,65 @@
           <source>1.6</source>
           <target>1.6</target>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.3.2</version>
+        <configuration>
+          <skip>${fastBuild}</skip>
+        </configuration>
+        <executions>
+          <execution>
+            <id>fake-rhq-server</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>java</goal>
+            </goals>
+            <configuration>
+              <mainClass>org.rhg.maven.plugins.itest.FakeRhqWarFactory</mainClass>
+              <classpathScope>test</classpathScope>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.wildfly.plugins</groupId>
+        <artifactId>wildfly-maven-plugin</artifactId>
+        <version>1.0.2.Final</version>
+        <configuration>
+          <artifact>org.wildfly:wildfly-dist:8.1.0.Final</artifact>
+          <jvmArgs>
+            -Xms64m -Xmx128m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true
+            -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000
+          </jvmArgs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>start-pre-integration-test</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>start</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>deploy-fake-war-pre-integration-test</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>deploy-only</goal>
+            </goals>
+            <configuration>
+              <filename>fake-rhq.war</filename>
+            </configuration>
+          </execution>
+          <execution>
+            <id>shutdown-post-integration-test</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>shutdown</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
